tests-integration/tests/roundtrip/valid_equality_operands/input.essence
find x, y : int(1..10)
such that x = y
