tests-integration/tests/roundtrip/invalid/semantic/keyword_as_identifier/01/keyword_as_identifier.essence
find find : int(1..10)
such that find > 5
